syntax = "proto3";
package proto;

message VerifyRequest {
    string token = 1;
    repeated string params = 2;
}

message VerifyResponse {
    bool success = 1;
    int32 status = 2;
}

service TokenInfo {
    rpc VerifyToken(VerifyRequest) returns (VerifyResponse);
}
