syntax = "proto3";
package proto;
option go_package = "github.com/grepplabs/kafka-proxy/plugin/token-provider/proto";

message TokenRequest {
    repeated string params = 1;
}

message TokenResponse {
    bool success = 1;
    int32 status = 2;
    string token = 3;
}

service TokenProvider {
    rpc GetToken(TokenRequest) returns (TokenResponse);
}
